--- a/NCsvPerf/NCsvPerf.csproj
+++ b/NCsvPerf/NCsvPerf.csproj
@@ -8,7 +8,9 @@
 
   <ItemGroup>
     <PackageReference Include="BenchmarkDotNet" Version="0.12.1" />
+    <PackageReference Include="Csv" Version="1.0.58" />
     <PackageReference Include="CsvHelper" Version="18.0.0" />
+    <PackageReference Include="CsvTextFieldParser" Version="1.2.1" />
     <PackageReference Include="FastCsvParser" Version="1.1.1" />
     <PackageReference Include="LumenWorksCsvReader" Version="4.0.0" />
     <PackageReference Include="mgholam.fastCSV" Version="2.0.8" />
