--- a/NCsvPerf/NCsvPerf.csproj
+++ b/NCsvPerf/NCsvPerf.csproj
@@ -2,7 +2,7 @@
 
   <PropertyGroup>
     <OutputType>Exe</OutputType>
-    <TargetFramework>netcoreapp3.1</TargetFramework>
+    <TargetFramework>net5.0</TargetFramework>
     <RootNamespace>Knapcode.NCsvPerf</RootNamespace>
   </PropertyGroup>
 
@@ -16,6 +16,7 @@
     <PackageReference Include="mgholam.fastCSV" Version="2.0.8" />
     <PackageReference Include="NReco.Csv" Version="1.0.0" />
     <PackageReference Include="ServiceStack.Text" Version="5.10.2" />
+    <PackageReference Include="Sylvan.Data.Csv" Version="0.8.1" />
     <PackageReference Include="TinyCsvParser" Version="2.6.0" />
   </ItemGroup>
 
