--- a/NCsvPerf/NCsvPerf.csproj
+++ b/NCsvPerf/NCsvPerf.csproj
@@ -16,6 +16,7 @@
     <PackageReference Include="mgholam.fastCSV" Version="2.0.9" />
     <PackageReference Include="NReco.Csv" Version="1.0.0" />
     <PackageReference Include="ServiceStack.Text" Version="5.10.2" />
+    <PackageReference Include="Sylvan.Common" Version="0.2.0" />
     <PackageReference Include="Sylvan.Data.Csv" Version="0.8.2" />
     <PackageReference Include="TinyCsvParser" Version="2.6.0" />
   </ItemGroup>
