--- a/NCsvPerf/NCsvPerf.csproj
+++ b/NCsvPerf/NCsvPerf.csproj
@@ -2,20 +2,22 @@
 
   <PropertyGroup>
     <OutputType>Exe</OutputType>
-    <TargetFramework>netcoreapp3.1</TargetFramework>
+    <TargetFramework>net5.0</TargetFramework>
     <RootNamespace>Knapcode.NCsvPerf</RootNamespace>
   </PropertyGroup>
 
   <ItemGroup>
     <PackageReference Include="BenchmarkDotNet" Version="0.12.1" />
-    <PackageReference Include="Csv" Version="1.0.58" />
-    <PackageReference Include="CsvHelper" Version="18.0.0" />
+    <PackageReference Include="Csv" Version="2.0.62" />
+    <PackageReference Include="CsvHelper" Version="19.0.0" />
     <PackageReference Include="CsvTextFieldParser" Version="1.2.1" />
     <PackageReference Include="FastCsvParser" Version="1.1.1" />
     <PackageReference Include="LumenWorksCsvReader" Version="4.0.0" />
-    <PackageReference Include="mgholam.fastCSV" Version="2.0.8" />
+    <PackageReference Include="mgholam.fastCSV" Version="2.0.9" />
     <PackageReference Include="NReco.Csv" Version="1.0.0" />
     <PackageReference Include="ServiceStack.Text" Version="5.10.2" />
+    <PackageReference Include="Sylvan.Common" Version="0.2.0" />
+    <PackageReference Include="Sylvan.Data.Csv" Version="0.8.2" />
     <PackageReference Include="TinyCsvParser" Version="2.6.0" />
   </ItemGroup>
 
