--- a/NCsvPerf/NCsvPerf.csproj
+++ b/NCsvPerf/NCsvPerf.csproj
@@ -11,6 +11,7 @@
     <PackageReference Include="Csv" Version="2.0.62" />
     <PackageReference Include="CsvHelper" Version="19.0.0" />
     <PackageReference Include="CsvTextFieldParser" Version="1.2.1" />
+    <PackageReference Include="Cursively" Version="1.2.0" />
     <PackageReference Include="FastCsvParser" Version="1.1.1" />
     <PackageReference Include="FluentCSV" Version="2.0.0" />
     <PackageReference Include="LumenWorksCsvReader" Version="4.0.0" />
