--- a/NCsvPerf/NCsvPerf.csproj
+++ b/NCsvPerf/NCsvPerf.csproj
@@ -8,6 +8,7 @@
 
   <ItemGroup>
     <PackageReference Include="BenchmarkDotNet" Version="0.12.1" />
+    <PackageReference Include="ChoETL" Version="1.2.1.5" />
     <PackageReference Include="Csv" Version="2.0.62" />
     <PackageReference Include="CsvHelper" Version="20.0.0" />
     <PackageReference Include="CsvTextFieldParser" Version="1.2.1" />
