--- a/NCsvPerf/NCsvPerf.csproj
+++ b/NCsvPerf/NCsvPerf.csproj
@@ -14,6 +14,7 @@
     <PackageReference Include="CsvTextFieldParser" Version="1.2.1" />
     <PackageReference Include="Ctl.Data" Version="2.0.0.2" />
     <PackageReference Include="Cursively" Version="1.2.0" />
+    <PackageReference Include="FlatFiles" Version="4.13.0" />
     <PackageReference Include="Knapcode.FastCsvParser" Version="1.1.0" />
     <PackageReference Include="FluentCSV" Version="2.0.0" />
     <PackageReference Include="LinqToCsv" Version="1.5.0" />
