Added benchmark for CommonLibrary.NET (#24)
* Updated CsvHelper to 20.0.0. Use CsvParser instead of CsvReader. Enable field caching.

* Added benchmark for CommonLibrary.NET.

--- a/NCsvPerf/NCsvPerf.csproj
+++ b/NCsvPerf/NCsvPerf.csproj
@@ -23,6 +23,7 @@
     <PackageReference Include="LumenWorksCsvReader" Version="4.0.0" />
     <PackageReference Include="mgholam.fastCSV" Version="2.0.9" />
     <PackageReference Include="NReco.Csv" Version="1.0.0" />
+    <PackageReference Include="SEA.CommonLibrary.NET" Version="0.9.8.8" />
     <PackageReference Include="ServiceStack.Text" Version="5.10.4" />
     <PackageReference Include="Sky.Data.Csv" Version="2.5.0" />
     <PackageReference Include="SoftCircuits.CsvParser" Version="2.4.3" />
