--- a/NCsvPerf/NCsvPerf.csproj
+++ b/NCsvPerf/NCsvPerf.csproj
@@ -13,17 +13,17 @@
     <PackageReference Include="CSVFile" Version="2.0.3" />
     <PackageReference Include="CsvHelper" Version="21.3.0" />
     <PackageReference Include="CsvTextFieldParser" Version="1.2.1" />
-    <PackageReference Include="CsvTools" Version="1.0.12" />
+    <PackageReference Include="CsvTools" Version="1.0.12" NoWarn="NU1701" />
     <PackageReference Include="Ctl.Data" Version="2.0.0.2" />
     <PackageReference Include="Cursively" Version="1.2.0" />
     <PackageReference Include="FlatFiles" Version="4.13.0" />
     <PackageReference Include="Knapcode.FastCsvParser" Version="1.1.0" />
     <PackageReference Include="FluentCSV" Version="3.0.0" />
-    <PackageReference Include="LinqToCsv" Version="1.5.0" />
+    <PackageReference Include="LinqToCsv" Version="1.5.0" NoWarn="NU1701" />
     <PackageReference Include="LumenWorksCsvReader" Version="4.0.0" />
     <PackageReference Include="mgholam.fastCSV" Version="2.0.9" />
     <PackageReference Include="NReco.Csv" Version="1.0.0" />
-    <PackageReference Include="SEA.CommonLibrary.NET" Version="0.9.8.8" />
+    <PackageReference Include="SEA.CommonLibrary.NET" Version="0.9.8.8" NoWarn="NU1701" />
     <PackageReference Include="ServiceStack.Text" Version="5.10.4" />
     <PackageReference Include="Sky.Data.Csv" Version="2.5.0" />
     <PackageReference Include="SoftCircuits.CsvParser" Version="2.4.3" />
