--- a/NCsvPerf/NCsvPerf.csproj
+++ b/NCsvPerf/NCsvPerf.csproj
@@ -17,13 +17,13 @@
     <PackageReference Include="Ctl.Data" Version="2.0.0.2" />
     <PackageReference Include="Cursively" Version="1.2.0" />
     <PackageReference Include="FlatFiles" Version="4.15.0" />
+    <PackageReference Include="Knapcode.CommonLibrary.NET" Version="0.9.8.8-beta.3" NoWarn="NU1701" />
     <PackageReference Include="Knapcode.FastCsvParser" Version="1.1.0" />
     <PackageReference Include="FluentCSV" Version="3.0.0" />
     <PackageReference Include="LinqToCsv" Version="1.5.0" NoWarn="NU1701" />
     <PackageReference Include="LumenWorksCsvReader" Version="4.0.0" />
     <PackageReference Include="mgholam.fastCSV" Version="2.0.9" />
     <PackageReference Include="NReco.Csv" Version="1.0.0" />
-    <PackageReference Include="SEA.CommonLibrary.NET" Version="0.9.8.8" NoWarn="NU1701" />
     <PackageReference Include="ServiceStack.Text" Version="5.11.0" />
     <PackageReference Include="Sky.Data.Csv" Version="2.5.0" />
     <PackageReference Include="SoftCircuits.CsvParser" Version="3.0.0" />
