--- a/NCsvPerf/NCsvPerf.csproj
+++ b/NCsvPerf/NCsvPerf.csproj
@@ -7,9 +7,14 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="FSharp.Core" Version="5.0.2" />
+    <PackageReference Include="System.Collections.Immutable" Version="1.5.0" />
+
+
+    <PackageReference Include="Angara.Table" Version="0.3.3" />
     <PackageReference Include="Ben.StringIntern" Version="0.1.8" />
     <PackageReference Include="BenchmarkDotNet" Version="0.13.0" />
-    <PackageReference Include="ChoETL" Version="1.2.1.18" />
+    <PackageReference Include="ChoETL" Version="1.2.1.22" />
     <PackageReference Include="Csv" Version="2.0.62" />
     <PackageReference Include="CSVFile" Version="3.0.2" />
     <PackageReference Include="CsvHelper" Version="27.1.1" />
@@ -17,24 +22,30 @@
     <PackageReference Include="CsvTools" Version="1.0.12" NoWarn="NU1701" />
     <PackageReference Include="Ctl.Data" Version="2.0.0.2" />
     <PackageReference Include="Cursively" Version="1.2.0" />
+    <PackageReference Include="Dsv" Version="1.3.1" />
+    <PackageReference Include="FileHelpers" Version="3.5.0" />
     <PackageReference Include="FlatFiles" Version="4.16.0" />
+    <PackageReference Include="KBCsv" Version="6.0.0" />
     <PackageReference Include="Knapcode.CommonLibrary.NET" Version="0.9.8.8-beta.3" NoWarn="NU1701" />
     <PackageReference Include="Knapcode.FastCsvParser" Version="1.1.0" />
     <PackageReference Include="FluentCSV" Version="3.0.0" />
     <PackageReference Include="LinqToCsv" Version="1.5.0" NoWarn="NU1701" />
     <PackageReference Include="LumenWorksCsvReader" Version="4.0.0" />
     <PackageReference Include="mgholam.fastCSV" Version="2.0.9" />
+    <PackageReference Include="Microsoft.Data.Analysis" Version="0.18.0" />
+    <PackageReference Include="Microsoft.ML" Version="1.6.0" />
     <PackageReference Include="NReco.Csv" Version="1.0.0" />
+    <PackageReference Include="Open.Text.CSV" Version="2.3.2" />
     <PackageReference Include="RecordParser" Version="1.2.0" />
     <PackageReference Include="ServiceStack.Text" Version="5.11.0" />
     <PackageReference Include="Sky.Data.Csv" Version="2.5.0" />
     <PackageReference Include="SoftCircuits.CsvParser" Version="3.0.0" />
     <PackageReference Include="Sylvan.Common" Version="0.2.1" />
-    <PackageReference Include="Sylvan.Data.Csv" Version="1.0.3" />
+    <PackageReference Include="Sylvan.Data.Csv" Version="1.1.4" />
     <PackageReference Include="System.IO.Pipelines" Version="5.0.1" />
     <PackageReference Include="TinyCsvParser" Version="2.6.1" />
 
-    <PackageReference Include="TxtCsvHelper" Version="1.2.9" />
+    <PackageReference Include="TxtCsvHelper" Version="1.3.1" />
   </ItemGroup>
 
   <ItemGroup>
