--- a/NCsvPerf/NCsvPerf.csproj
+++ b/NCsvPerf/NCsvPerf.csproj
@@ -7,6 +7,7 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="Cesil" Version="0.9.0" />
     <PackageReference Include="FSharp.Core" Version="5.0.2" />
     <PackageReference Include="System.Collections.Immutable" Version="1.5.0" />
 
