--- a/NCsvPerf/NCsvPerf.csproj
+++ b/NCsvPerf/NCsvPerf.csproj
@@ -13,11 +13,11 @@
     <PackageReference Include="Angara.Serialization" Version="0.3.0" NoWarn="NU1701" />
     <PackageReference Include="Angara.Statistics" Version="0.1.4" NoWarn="NU1701" />
     <PackageReference Include="Ben.StringIntern" Version="0.1.8" />
-    <PackageReference Include="BenchmarkDotNet" Version="0.13.5" />
+    <PackageReference Include="BenchmarkDotNet" Version="0.13.9" />
     <PackageReference Include="Cesil" Version="0.9.0" />
-    <PackageReference Include="ChoETL" Version="1.2.1.50" /> <!-- Up to version 1.2.1.56 do not pass the unit tests. -->
+    <PackageReference Include="ChoETL" Version="1.2.1.64" />
     <PackageReference Include="Csv" Version="2.0.93" />
-    <PackageReference Include="CSVFile" Version="3.1.0" />
+    <PackageReference Include="CSVFile" Version="3.1.2" />
     <PackageReference Include="CsvHelper" Version="30.0.1" />
     <PackageReference Include="CsvTextFieldParser" Version="1.2.2" />
     <PackageReference Include="CsvTools" Version="1.0.12" NoWarn="NU1701" />
@@ -27,7 +27,7 @@
     <PackageReference Include="FileHelpers" Version="3.5.2" />
     <PackageReference Include="FlatFiles" Version="5.0.4" />
     <PackageReference Include="FluentCSV" Version="3.0.0" />
-    <PackageReference Include="FSharp.Core" Version="7.0.200" />
+    <PackageReference Include="FSharp.Core" Version="7.0.401" />
     <PackageReference Include="KBCsv" Version="6.0.0" />
     <PackageReference Include="Knapcode.CommonLibrary.NET" Version="0.9.8.8-beta.3" NoWarn="NU1701" />
     <PackageReference Include="Knapcode.FastCsvParser" Version="1.1.0" />
@@ -36,15 +36,15 @@
     <PackageReference Include="mgholam.fastCSV" Version="2.0.9" />
     <PackageReference Include="Microsoft.Data.Analysis" Version="0.20.1" />
     <PackageReference Include="Microsoft.ML" Version="2.0.1" />
-    <PackageReference Include="NReco.Csv" Version="1.0.1" />
-    <PackageReference Include="Open.Text.CSV" Version="3.3.0" />
+    <PackageReference Include="NReco.Csv" Version="1.0.2" />
+    <PackageReference Include="Open.Text.CSV" Version="3.4.0" />
     <PackageReference Include="RecordParser" Version="2.1.0" />
-    <PackageReference Include="Sep" Version="0.1.0" />
-    <PackageReference Include="ServiceStack.Text" Version="6.7.0" />
+    <PackageReference Include="Sep" Version="0.2.7" />
+    <PackageReference Include="ServiceStack.Text" Version="6.11.0" />
     <PackageReference Include="Sky.Data.Csv" Version="2.5.0" />
-    <PackageReference Include="SoftCircuits.CsvParser" Version="4.0.0" />
-    <PackageReference Include="Sylvan.Common" Version="0.4.1" />
-    <PackageReference Include="Sylvan.Data.Csv" Version="1.2.7" />
+    <PackageReference Include="SoftCircuits.CsvParser" Version="4.1.0" />
+    <PackageReference Include="Sylvan.Common" Version="0.4.2" />
+    <PackageReference Include="Sylvan.Data.Csv" Version="1.3.3" />
     <PackageReference Include="System.Collections.Immutable" Version="7.0.0" NoWarn="NU1608" />
     <PackageReference Include="System.IO.Pipelines" Version="7.0.0" />
     <PackageReference Include="TinyCsvParser" Version="2.7.0" />
