--- a/NCsvPerf/NCsvPerf.csproj
+++ b/NCsvPerf/NCsvPerf.csproj
@@ -17,7 +17,7 @@
     <PackageReference Include="Cesil" Version="0.9.0" />
     <PackageReference Include="ChoETL" Version="1.2.1.64" />
     <PackageReference Include="Csv" Version="2.0.93" />
-    <PackageReference Include="CSVFile" Version="3.1.2" />
+    <PackageReference Include="CSVFile" Version="3.1.1" /> <!-- 3.1.2 is broken per https://github.com/tspence/csharp-csv-reader/issues/62 -->
     <PackageReference Include="CsvHelper" Version="30.0.1" />
     <PackageReference Include="CsvTextFieldParser" Version="1.2.2" />
     <PackageReference Include="CsvTools" Version="1.0.12" NoWarn="NU1701" />
