--- a/NCsvPerf/NCsvPerf.csproj
+++ b/NCsvPerf/NCsvPerf.csproj
@@ -28,6 +28,7 @@
     <PackageReference Include="FlatFiles" Version="5.0.4" />
     <PackageReference Include="FluentCSV" Version="3.0.0" />
     <PackageReference Include="FSharp.Core" Version="7.0.401" />
+    <PackageReference Include="GenericParsing" Version="1.3.0" />
     <PackageReference Include="KBCsv" Version="6.0.0" />
     <PackageReference Include="Knapcode.CommonLibrary.NET" Version="0.9.8.8-beta.3" NoWarn="NU1701" />
     <PackageReference Include="Knapcode.FastCsvParser" Version="1.1.0" />
